# GComponentBaseLib

./: .gitignore  CMakeLists.txt  README.md
Concept/: gconcept.hpp
GComponent/: GGeometry.hpp  GMatrix.h  GNumerical.hpp  GRobot_FKine.hpp  GTransform.hpp  grobotkinematic-inl.hpp  grobotkinematic.cpp  grobotkinematic.h  heuristic_ik_solver.hpp
GComponent/Geometry/: gcollision_detection.cpp  gcollision_detection.h  gdistance.cpp  gdistance.h
GRendering/: Camera.h  GBall.cpp  GBall.h  GCube.cpp  GCube.h  GObject.hpp  GPlane.cpp  GPlane.h  Light.h  MyObjects.cpp  MyObjects.h  MyShader.cpp  MyShader.h  glfwWindow.cpp  glfwWindow.h  manager.h
LSSolver/: LinearSystemSolver.hpp  PenroseInverse.hpp
Test/: CMakeLists.txt  TestNearestSegment.cpp  TestNearestTriangle.cpp
Test/CurvesTest/: CMakeLists.txt  TestCubicCurvesFunction.cpp
Test/GeomtryBaseTest/: CMakeLists.txt  TestBarycentricCoords.cpp  TestSquareDist.cpp
Test/KinematicTest/: CMakeLists.txt  TestIKforUR5.cpp
Test/NearestSimplexTest/: CMakeLists.txt  TestNearestTetrahedron.cpp  TestNearestTriangle.cpp
Test/RotationTest/: CMakeLists.txt  EulerAngleTest.cpp
TimerBase/: TimerBase.hpp
source/Concept/: gconcept.hpp
source/GBase/: IDPool.h
source/GComponent/: GGeometry.hpp  GNumerical.hpp  grobotkinematic-inl.hpp  grobotkinematic.cpp  gtransform.hpp  heuristic_ik_solver.hpp  types.h
source/GComponent/Geometry/: barycentric_coordinates.cpp  barycentric_coordinates.h  epa_penetration.cpp  gcollision_detection.cpp  gcollision_detection.h  gdistance.cpp  gdistance.h  geom_utils.h  gjk_convex.h  gjk_data_structures.h  gjk_intersection.cpp  gjk_penetration.cpp  penetration.cpp
source/GRendering/: GCube.cpp  GObject.hpp  MyShader.h  glad.c  manager.cpp
source/LSSolver/: LinearSystemSolver.hpp
source/TimerBase/: StopWatch.hpp
测试任务/: 测试任务.md
